engine/scripting/native_api/dse_api.gen.h

DSE_CAPI_GEN void dse_water_get_shallow_color(uint32_t e, float* x, float* y, float* z, float* w);
DSE_CAPI_GEN void dse_water_set_shallow_color(uint32_t e, float x, float y, float z, float w);
DSE_CAPI_GEN float dse_water_get_max_depth(uint32_t e);
DSE_CAPI_GEN void  dse_water_set_max_depth(uint32_t e, float v);
DSE_CAPI_GEN float dse_water_get_transparency(uint32_t e);
DSE_CAPI_GEN void  dse_water_set_transparency(uint32_t e, float v);
DSE_CAPI_GEN float dse_water_get_wave_amplitude(uint32_t e);
DSE_CAPI_GEN void  dse_water_set_wave_amplitude(uint32_t e, float v);
DSE_CAPI_GEN float dse_water_get_wave_frequency(uint32_t e);
DSE_CAPI_GEN void  dse_water_set_wave_frequency(uint32_t e, float v);
DSE_CAPI_GEN float dse_water_get_wave_speed(uint32_t e);
DSE_CAPI_GEN void  dse_water_set_wave_speed(uint32_t e, float v);
DSE_CAPI_GEN void dse_water_get_wave_direction(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_water_set_wave_direction(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN float dse_water_get_refraction_strength(uint32_t e);
DSE_CAPI_GEN void  dse_water_set_refraction_strength(uint32_t e, float v);
DSE_CAPI_GEN float dse_water_get_reflection_strength(uint32_t e);
DSE_CAPI_GEN void  dse_water_set_reflection_strength(uint32_t e, float v);
DSE_CAPI_GEN float dse_water_get_specular_power(uint32_t e);
DSE_CAPI_GEN void  dse_water_set_specular_power(uint32_t e, float v);
DSE_CAPI_GEN float dse_water_get_caustic_intensity(uint32_t e);
DSE_CAPI_GEN void  dse_water_set_caustic_intensity(uint32_t e, float v);
DSE_CAPI_GEN float dse_water_get_caustic_scale(uint32_t e);
DSE_CAPI_GEN void  dse_water_set_caustic_scale(uint32_t e, float v);
DSE_CAPI_GEN float dse_water_get_foam_intensity(uint32_t e);
DSE_CAPI_GEN void  dse_water_set_foam_intensity(uint32_t e, float v);
DSE_CAPI_GEN float dse_water_get_foam_depth_threshold(uint32_t e);
DSE_CAPI_GEN void  dse_water_set_foam_depth_threshold(uint32_t e, float v);
DSE_CAPI_GEN float dse_water_get_underwater_fog_density(uint32_t e);
DSE_CAPI_GEN void  dse_water_set_underwater_fog_density(uint32_t e, float v);
DSE_CAPI_GEN void dse_water_get_underwater_fog_color(uint32_t e, float* x, float* y, float* z, float* w);
DSE_CAPI_GEN void dse_water_set_underwater_fog_color(uint32_t e, float x, float y, float z, float w);
/* ---- LightProbeComponent ---- */
DSE_CAPI_GEN int  dse_light_probe_get_enabled(uint32_t e);
DSE_CAPI_GEN void dse_light_probe_set_enabled(uint32_t e, int v);
DSE_CAPI_GEN float dse_light_probe_get_influence_radius(uint32_t e);
DSE_CAPI_GEN void  dse_light_probe_set_influence_radius(uint32_t e, float v);
DSE_CAPI_GEN int  dse_light_probe_get_show_debug(uint32_t e);
DSE_CAPI_GEN void dse_light_probe_set_show_debug(uint32_t e, int v);
/* ---- ReflectionProbeComponent ---- */
DSE_CAPI_GEN int  dse_reflection_probe_get_enabled(uint32_t e);
DSE_CAPI_GEN void dse_reflection_probe_set_enabled(uint32_t e, int v);
DSE_CAPI_GEN float dse_reflection_probe_get_influence_radius(uint32_t e);
DSE_CAPI_GEN void  dse_reflection_probe_set_influence_radius(uint32_t e, float v);
DSE_CAPI_GEN float dse_reflection_probe_get_box_size_x(uint32_t e);
DSE_CAPI_GEN void  dse_reflection_probe_set_box_size_x(uint32_t e, float v);
DSE_CAPI_GEN float dse_reflection_probe_get_box_size_y(uint32_t e);
DSE_CAPI_GEN void  dse_reflection_probe_set_box_size_y(uint32_t e, float v);
DSE_CAPI_GEN float dse_reflection_probe_get_box_size_z(uint32_t e);
DSE_CAPI_GEN void  dse_reflection_probe_set_box_size_z(uint32_t e, float v);
DSE_CAPI_GEN int  dse_reflection_probe_get_use_box_projection(uint32_t e);
DSE_CAPI_GEN void dse_reflection_probe_set_use_box_projection(uint32_t e, int v);
DSE_CAPI_GEN int  dse_reflection_probe_get_resolution(uint32_t e);
DSE_CAPI_GEN void dse_reflection_probe_set_resolution(uint32_t e, int v);
DSE_CAPI_GEN int  dse_reflection_probe_get_show_debug(uint32_t e);
DSE_CAPI_GEN void dse_reflection_probe_set_show_debug(uint32_t e, int v);
/* ---- GIProbeVolumeComponent ---- */
DSE_CAPI_GEN int  dse_gi_probe_get_enabled(uint32_t e);
DSE_CAPI_GEN void dse_gi_probe_set_enabled(uint32_t e, int v);
DSE_CAPI_GEN void dse_gi_probe_get_origin(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_gi_probe_set_origin(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN void dse_gi_probe_get_extent(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_gi_probe_set_extent(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN int  dse_gi_probe_get_resolution_x(uint32_t e);
DSE_CAPI_GEN void dse_gi_probe_set_resolution_x(uint32_t e, int v);
DSE_CAPI_GEN int  dse_gi_probe_get_resolution_y(uint32_t e);
DSE_CAPI_GEN void dse_gi_probe_set_resolution_y(uint32_t e, int v);
DSE_CAPI_GEN int  dse_gi_probe_get_resolution_z(uint32_t e);
DSE_CAPI_GEN void dse_gi_probe_set_resolution_z(uint32_t e, int v);
DSE_CAPI_GEN int  dse_gi_probe_get_irradiance_texels(uint32_t e);
DSE_CAPI_GEN void dse_gi_probe_set_irradiance_texels(uint32_t e, int v);
DSE_CAPI_GEN int  dse_gi_probe_get_visibility_texels(uint32_t e);
DSE_CAPI_GEN void dse_gi_probe_set_visibility_texels(uint32_t e, int v);
DSE_CAPI_GEN int  dse_gi_probe_get_rays_per_probe(uint32_t e);
DSE_CAPI_GEN void dse_gi_probe_set_rays_per_probe(uint32_t e, int v);
DSE_CAPI_GEN float dse_gi_probe_get_hysteresis(uint32_t e);
DSE_CAPI_GEN void  dse_gi_probe_set_hysteresis(uint32_t e, float v);
DSE_CAPI_GEN float dse_gi_probe_get_gi_intensity(uint32_t e);
DSE_CAPI_GEN void  dse_gi_probe_set_gi_intensity(uint32_t e, float v);