GameScripts/DSEngine.Runtime/Generated/Native.gen.cs


    [LibraryImport(Lib, EntryPoint = "dse_water_get_shallow_color")]
    internal static partial void dse_water_get_shallow_color(uint e, out float x, out float y, out float z, out float w);

    [LibraryImport(Lib, EntryPoint = "dse_water_set_shallow_color")]
    internal static partial void dse_water_set_shallow_color(uint e, float x, float y, float z, float w);

    [LibraryImport(Lib, EntryPoint = "dse_water_get_max_depth")]
    internal static partial float dse_water_get_max_depth(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_water_set_max_depth")]
    internal static partial void dse_water_set_max_depth(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_water_get_transparency")]
    internal static partial float dse_water_get_transparency(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_water_set_transparency")]
    internal static partial void dse_water_set_transparency(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_water_get_wave_amplitude")]
    internal static partial float dse_water_get_wave_amplitude(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_water_set_wave_amplitude")]
    internal static partial void dse_water_set_wave_amplitude(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_water_get_wave_frequency")]
    internal static partial float dse_water_get_wave_frequency(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_water_set_wave_frequency")]
    internal static partial void dse_water_set_wave_frequency(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_water_get_wave_speed")]
    internal static partial float dse_water_get_wave_speed(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_water_set_wave_speed")]
    internal static partial void dse_water_set_wave_speed(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_water_get_wave_direction")]
    internal static partial void dse_water_get_wave_direction(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_water_set_wave_direction")]
    internal static partial void dse_water_set_wave_direction(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_water_get_refraction_strength")]
    internal static partial float dse_water_get_refraction_strength(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_water_set_refraction_strength")]
    internal static partial void dse_water_set_refraction_strength(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_water_get_reflection_strength")]
    internal static partial float dse_water_get_reflection_strength(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_water_set_reflection_strength")]
    internal static partial void dse_water_set_reflection_strength(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_water_get_specular_power")]
    internal static partial float dse_water_get_specular_power(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_water_set_specular_power")]
    internal static partial void dse_water_set_specular_power(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_water_get_caustic_intensity")]
    internal static partial float dse_water_get_caustic_intensity(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_water_set_caustic_intensity")]
    internal static partial void dse_water_set_caustic_intensity(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_water_get_caustic_scale")]
    internal static partial float dse_water_get_caustic_scale(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_water_set_caustic_scale")]
    internal static partial void dse_water_set_caustic_scale(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_water_get_foam_intensity")]
    internal static partial float dse_water_get_foam_intensity(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_water_set_foam_intensity")]
    internal static partial void dse_water_set_foam_intensity(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_water_get_foam_depth_threshold")]
    internal static partial float dse_water_get_foam_depth_threshold(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_water_set_foam_depth_threshold")]
    internal static partial void dse_water_set_foam_depth_threshold(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_water_get_underwater_fog_density")]
    internal static partial float dse_water_get_underwater_fog_density(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_water_set_underwater_fog_density")]
    internal static partial void dse_water_set_underwater_fog_density(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_water_get_underwater_fog_color")]
    internal static partial void dse_water_get_underwater_fog_color(uint e, out float x, out float y, out float z, out float w);

    [LibraryImport(Lib, EntryPoint = "dse_water_set_underwater_fog_color")]
    internal static partial void dse_water_set_underwater_fog_color(uint e, float x, float y, float z, float w);

    // ---- LightProbeComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_light_probe_get_enabled")]
    internal static partial int dse_light_probe_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_light_probe_set_enabled")]
    internal static partial void dse_light_probe_set_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_light_probe_get_influence_radius")]
    internal static partial float dse_light_probe_get_influence_radius(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_light_probe_set_influence_radius")]
    internal static partial void dse_light_probe_set_influence_radius(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_light_probe_get_show_debug")]
    internal static partial int dse_light_probe_get_show_debug(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_light_probe_set_show_debug")]
    internal static partial void dse_light_probe_set_show_debug(uint e, int v);

    // ---- ReflectionProbeComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_reflection_probe_get_enabled")]
    internal static partial int dse_reflection_probe_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_reflection_probe_set_enabled")]
    internal static partial void dse_reflection_probe_set_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_reflection_probe_get_influence_radius")]
    internal static partial float dse_reflection_probe_get_influence_radius(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_reflection_probe_set_influence_radius")]
    internal static partial void dse_reflection_probe_set_influence_radius(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_reflection_probe_get_box_size_x")]
    internal static partial float dse_reflection_probe_get_box_size_x(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_reflection_probe_set_box_size_x")]
    internal static partial void dse_reflection_probe_set_box_size_x(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_reflection_probe_get_box_size_y")]
    internal static partial float dse_reflection_probe_get_box_size_y(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_reflection_probe_set_box_size_y")]
    internal static partial void dse_reflection_probe_set_box_size_y(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_reflection_probe_get_box_size_z")]
    internal static partial float dse_reflection_probe_get_box_size_z(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_reflection_probe_set_box_size_z")]
    internal static partial void dse_reflection_probe_set_box_size_z(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_reflection_probe_get_use_box_projection")]
    internal static partial int dse_reflection_probe_get_use_box_projection(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_reflection_probe_set_use_box_projection")]
    internal static partial void dse_reflection_probe_set_use_box_projection(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_reflection_probe_get_resolution")]
    internal static partial int dse_reflection_probe_get_resolution(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_reflection_probe_set_resolution")]
    internal static partial void dse_reflection_probe_set_resolution(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_reflection_probe_get_show_debug")]
    internal static partial int dse_reflection_probe_get_show_debug(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_reflection_probe_set_show_debug")]
    internal static partial void dse_reflection_probe_set_show_debug(uint e, int v);

    // ---- GIProbeVolumeComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_get_enabled")]
    internal static partial int dse_gi_probe_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_set_enabled")]
    internal static partial void dse_gi_probe_set_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_get_origin")]
    internal static partial void dse_gi_probe_get_origin(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_set_origin")]
    internal static partial void dse_gi_probe_set_origin(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_get_extent")]
    internal static partial void dse_gi_probe_get_extent(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_set_extent")]
    internal static partial void dse_gi_probe_set_extent(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_get_resolution_x")]
    internal static partial int dse_gi_probe_get_resolution_x(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_set_resolution_x")]
    internal static partial void dse_gi_probe_set_resolution_x(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_get_resolution_y")]
    internal static partial int dse_gi_probe_get_resolution_y(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_set_resolution_y")]
    internal static partial void dse_gi_probe_set_resolution_y(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_get_resolution_z")]
    internal static partial int dse_gi_probe_get_resolution_z(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_set_resolution_z")]
    internal static partial void dse_gi_probe_set_resolution_z(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_get_irradiance_texels")]
    internal static partial int dse_gi_probe_get_irradiance_texels(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_set_irradiance_texels")]
    internal static partial void dse_gi_probe_set_irradiance_texels(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_get_visibility_texels")]
    internal static partial int dse_gi_probe_get_visibility_texels(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_set_visibility_texels")]
    internal static partial void dse_gi_probe_set_visibility_texels(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_get_rays_per_probe")]
    internal static partial int dse_gi_probe_get_rays_per_probe(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_set_rays_per_probe")]
    internal static partial void dse_gi_probe_set_rays_per_probe(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_get_hysteresis")]
    internal static partial float dse_gi_probe_get_hysteresis(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_set_hysteresis")]
    internal static partial void dse_gi_probe_set_hysteresis(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_get_gi_intensity")]
    internal static partial float dse_gi_probe_get_gi_intensity(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_gi_probe_set_gi_intensity")]
    internal static partial void dse_gi_probe_set_gi_intensity(uint e, float v);
